Add /account/balance endpoint (#4)
* add swagger account models; make validate-swagger run; tested endpoint
currently passes asserter checks and returns ErrUnimplemented

* add integration tests for /account/balance endpoint that checks
spendable coins against returned rosetta balances

* go sum update

* add service layer for /account/balances with stub for kava client method

* add support for fetching a block by hash over tendermint rpc

* add fetching an account by block index and by block hash -- adds end to
end coverage of BlockByHash method added for tendermint rpc

* add vesting account test fixture

* update integration test; fix bad no nil assertions; and query account at
specific height, then use block height to get spendable balance

* add Account method to rpc interface

* update rpc mock for Account function

* add account balance implementation

* add test for decoding hash err

* add missing licenses
