# swagger/api.yaml
@@ -116,17 +116,69 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+
+  /account/balance:
+    post:
+      summary: Get an Account's Balance
+      description: |
+        Get an array of all AccountBalances for an AccountIdentifier and the
+        BlockIdentifier at which the balance lookup was performed. The BlockIdentifier
+        must always be returned because some consumers of account balance data need
+        to know specifically at which block the balance was calculated to
+        compare balances they compute from operations with the balance returned
+        by the node.
+
+        It is important to note that making a balance request for an account
+        without populating the SubAccountIdentifier should not result in the
+        balance of all possible SubAccountIdentifiers being returned. Rather,
+        it should result in the balance pertaining to no SubAccountIdentifiers
+        being returned (sometimes called the liquid balance). To get all
+        balances associated with an account, it may be necessary to
+        perform multiple balance requests with unique AccountIdentifiers.
+
+        It is also possible to perform a historical balance lookup (if the server
+        supports it) by passing in an optional BlockIdentifier.
+      operationId: accountBalance
+      tags:
+        - Account
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AccountBalanceRequest'
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccountBalanceResponse'
+        '500':
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     # Identifiers
+    AccountIdentifier:
+      $ref: 'models/AccountIdentifier.yaml'
     NetworkIdentifier:
       $ref: 'models/NetworkIdentifier.yaml'
     BlockIdentifier:
       $ref: 'models/BlockIdentifier.yaml'
+    PartialBlockIdentifier:
+      $ref: 'models/PartialBlockIdentifier.yaml'
 
     # Models
     Allow:
       $ref: 'models/Allow.yaml'
+    Amount:
+      $ref: 'models/Amount.yaml'
+    Currency:
+      $ref: 'models/Currency.yaml'
     Version:
       $ref: 'models/Version.yaml'
     SyncStatus:
@@ -137,6 +189,61 @@ components:
       $ref: 'models/Timestamp.yaml'
 
     # Request/Responses
+    AccountBalanceRequest:
+      description: |
+        An AccountBalanceRequest is utilized to make a balance request
+        on the /account/balance endpoint. If the block_identifier is populated,
+        a historical balance query should be performed.
+      type: object
+      required:
+        - network_identifier
+        - account_identifier
+      properties:
+        network_identifier:
+          $ref: '#/components/schemas/NetworkIdentifier'
+        account_identifier:
+          $ref: '#/components/schemas/AccountIdentifier'
+        block_identifier:
+          $ref: '#/components/schemas/PartialBlockIdentifier'
+        currencies:
+          type: array
+          description: |
+            In some cases, the caller may not want to retrieve all available
+            balances for an AccountIdentifier. If the currencies field
+            is populated, only balances for the specified currencies
+            will be returned. If not populated, all available balances
+            will be returned.
+          items:
+            $ref: '#/components/schemas/Currency'
+    AccountBalanceResponse:
+      description: |
+        An AccountBalanceResponse is returned on the /account/balance endpoint.
+        If an account has a balance for each AccountIdentifier describing it
+        (ex: an ukava token balance on staking, vesting, etc), an account
+        balance request must be made with each AccountIdentifier.
+
+        The `coins` field was removed and replaced by by `/account/coins` in `v1.4.7`.
+      type: object
+      required:
+        - block_identifier
+        - balances
+      properties:
+        block_identifier:
+          $ref: '#/components/schemas/BlockIdentifier'
+        balances:
+          type: array
+          description: |
+            A single account may have a balance in multiple currencies.
+          items:
+            $ref: '#/components/schemas/Amount'
+        metadata:
+          description: |
+            Account-based blockchains that utilize a nonce or sequence number
+            should include that number in the metadata. This number could be
+            unique to the identifier or global across the account address.
+          type: object
+          example:
+            sequence_number: 23
     MetadataRequest:
       description: |
         A MetadataRequest is utilized in any request where
